force-app/main/default/objects/Application__c/fields/Acknowledged_Date__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged_Date__c</fullName>
    <label>Acknowledged Date</label>
    <type>Date</type>
</CustomField>