force-app/main/default/objects/Application__c/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <formula>Application_Type__r.Authority__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authority</label>
    <type>Text</type>
</CustomField>