force-app/main/default/objects/Application__c/fields/Days_in_Process__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Process__c</fullName>
    <formula>IF(ISBLANK(Submitted_Date__c), 0, IF(ISBLANK(Decision_Date__c), TODAY(), Decision_Date__c) - Submitted_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Process</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>