force-app/main/default/objects/Application__c/fields/Expected_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Decision_Date__c</fullName>
    <formula>Submitted_Date__c + Application_Type__r.Standard_Processing_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Decision Date</label>
    <type>Date</type>
</CustomField>