force-app/main/default/objects/Application__c/fields/Immigration_Case__c.field-meta.xml
<CustomField>
    <fullName>Immigration_Case__c</fullName>
    <label>Immigration Case</label>
    <referenceTo>Immigration_Case__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>