force-app/main/default/objects/Application__c/fields/Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>Is_Closed__c</fullName>
    <formula>ISPICKVAL(Status__c,&apos;Decision Made&apos;) || ISPICKVAL(Status__c,&apos;Withdrawn&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>