force-app/main/default/objects/Application__c/fields/Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Is_Overdue__c</fullName>
    <formula>NOT(ISBLANK(Expected_Decision_Date__c)) &amp;&amp; Expected_Decision_Date__c &lt; TODAY() &amp;&amp; NOT(Is_Closed__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Overdue</label>
    <type>Checkbox</type>
</CustomField>