force-app/main/default/objects/Application__c/fields/Mandatory_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Outstanding__c</fullName>
    <label>Mandatory Outstanding</label>
    <summaryFilterItems>
        <field>Checklist_Item__c.Is_Mandatory_snapshot__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Checklist_Item__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Verified, Waived</value>
    </summaryFilterItems>
    <summaryForeignKey>Checklist_Item__c.Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>