force-app/main/default/objects/Application__c/fields/Portal_Status_URL__c.field-meta.xml
<CustomField>
    <fullName>Portal_Status_URL__c</fullName>
    <formula>SUBSTITUTE( Application_Type__r.Authority__r.Status_URL_Pattern__c , &apos;{0}&apos;,  Receipt_Reference_Number__c )</formula>
    <label>Portal Status URL</label>
    <type>Text</type>
</CustomField>