force-app/main/default/objects/Application__c/fields/Readiness_Percent__c.field-meta.xml
<CustomField>
    <fullName>Readiness_Percent__c</fullName>
    <formula>IF(Requirements_Total__c = 0, 0, Requirements_Satisfied__c / Requirements_Total__c * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Readiness %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>