force-app/main/default/objects/Application__c/fields/Receipt_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Reference_Number__c</fullName>
    <externalId>true</externalId>
    <label>Receipt / Reference Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>