force-app/main/default/objects/Application__c/fields/Requirements_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>Requirements_Satisfied__c</fullName>
    <label>Requirements Satisfied</label>
    <summaryFilterItems>
        <field>Checklist_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Verified</value>
    </summaryFilterItems>
    <summaryForeignKey>Checklist_Item__c.Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>