force-app/main/default/objects/Application__c/fields/Requirements_Total__c.field-meta.xml
<CustomField>
    <fullName>Requirements_Total__c</fullName>
    <label>Requirements Total</label>
    <summaryForeignKey>Checklist_Item__c.Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>