force-app/main/default/objects/Application__c/fields/Total_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Fees__c</fullName>
    <label>Total Fees</label>
    <summarizedField>Fee__c.Amount__c</summarizedField>
    <summaryForeignKey>Fee__c.Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>